WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216951
Fix WEBGL_compressed_texture_s3tc_srgb in WebGL 2
https://bugs.webkit.org/show_bug.cgi?id=216951
Summary
Fix WEBGL_compressed_texture_s3tc_srgb in WebGL 2
James Darpinian
Reported
2020-09-24 17:06:03 PDT
Fix WEBGL_compressed_texture_s3tc_srgb in WebGL 2
Attachments
Patch
(3.18 KB, patch)
2020-09-24 17:08 PDT
,
James Darpinian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Darpinian
Comment 1
2020-09-24 17:08:42 PDT
Created
attachment 409638
[details]
Patch
Kenneth Russell
Comment 2
2020-09-24 17:58:44 PDT
To clarify, this should probably read "Support WEBGL_compressed_texture_s3tc_srgb in WebGL 2".
Kenneth Russell
Comment 3
2020-09-24 17:59:03 PDT
Comment on
attachment 409638
[details]
Patch Looks good! r+
EWS
Comment 4
2020-09-25 14:43:45 PDT
Committed
r267595
: <
https://trac.webkit.org/changeset/267595
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409638
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-09-25 14:44:17 PDT
<
rdar://problem/69595106
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug