Fix WEBGL_compressed_texture_s3tc_srgb in WebGL 2 https://bugs.webkit.org/show_bug.cgi?id=216951

Reviewed by Kenneth Russell.

Tested by webgl/2.0.0/conformance/extensions/webgl-compressed-texture-s3tc-srgb.html

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::getExtension):
(WebCore::WebGL2RenderingContext::getSupportedExtensions):


Canonical link: https://commits.webkit.org/229768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267595 268f45cc-cd09-0410-ab3c-d52691b4dbfc